# zorg

./: .env.example  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: release.yml
src/: app.rs
src/db/: history.rs  hop.rs  mod.rs
src/input/: main_handler.rs  mod.rs  modal_handler.rs
src/ssh/: agent.rs  keys.rs  runner.rs
src/ui/: layout.rs  mod.rs  utils.rs
src/ui/components/: connection_details.rs  connection_list.rs  history.rs  mod.rs  search_input.rs
src/ui/modals/: create_connection.rs  delete_connection.rs  keys.rs  mod.rs  proxy_jumps.rs
