[package]
name = "zorg"
version = "0.0.1"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
diesel_migrations = "2.2.0"
chrono = "0.4"
dotenvy = "0.15"
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3.7"
unicode-width = "0.2.0"
